--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,14 @@
 }
 
 .Back{
-  background-color:#456F56;
+  background-color:#306b48;
+  padding-left:25%;
+  padding-right:25%;
+  padding-bottom:50%;
+}
+.form-input{
+  padding-left: 10%;
+  padding-right: 10%;
 }
 
 .lista {
