--- a/src/App.css
+++ b/src/App.css
@@ -13,15 +13,7 @@
   }
 }
 
-.App-header {
-  background-color: #004A1E;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+
 
 .App-link {
   color: #61dafb;
@@ -44,12 +36,66 @@
   text-align: center;
   color: white;
 }
+.App-header {
+  background-color: #004A1E;
+  display: flex;
+  flex-direction: column;
+  color: white;
+}
 
 .Back{
   background-color:#306b48;
-  padding-left:25%;
-  padding-right:25%;
-  padding-bottom:50%;
+  margin-right:10%;
+  padding-left:5%;
+  padding-right:5%;
+  margin-left:10%;
+  padding-bottom:40%;
+}
+.Button{
+  background-color: #00d6fcfd;
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+.AceptButton{
+  background-color: #00fc7efd;
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+}
+.CancelButton{
+  background-color: #fc0000fd;
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+}
+.button:hover {
+  background-color: #02758a; /* Green */
+  color: black;
+}
+.ButtonFileLoad{
+
+  background-color: #4ec292fd;
+  border: none;
+  color: white;
+  padding: 10px 15px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 12px;
+}
+.ValidatorMessage{
+  color:red;
+  font-size: 5;
 }
 .form-input{
   padding-left: 10%;
