--- a/src/App.css
+++ b/src/App.css
@@ -51,8 +51,40 @@
   margin-left:10%;
   padding-bottom:40%;
 }
+.pagination {
+  margin: 15px auto;
+  display: flex;
+  list-style: none;
+  outline: none;
+  text-decoration: none;
+}
+.pagination > .active > a{
+  background-color: #47de8b ;
+  border-color: #47de8b ;
+  color: #fff;
+  text-decoration: none;
+}
+.pagination > li > a{
+  border: 1px solid #47de8b ;
+  padding: 5px 10px;
+  outline: none;
+  cursor: pointer;
+  text-decoration: none;
+}
+.pagination > .active > a, .pagination > .active > span, .pagination > .active > a:hover, .pagination > .active > span:hover, .pagination > .active > a:focus, .pagination > .active > span:focus{
+  background-color: #47de8b ;
+  border-color: #47de8b;
+  outline: none ;
+  text-decoration: none;
+}
+.pagination > li > a, .pagination > li > span{
+  color: #47de8b
+}
+.pagination > li:first-child > a, .pagination > li:first-child > span, .pagination > li:last-child > a, .pagination > li:last-child > span{
+  border-radius: unset
+}
 .Button{
-  background-color: #00d6fcfd;
+  background-color: #47de8b;
   border: none;
   color: white;
   padding: 10px 20px;
