Añadida vista de panic para cuando salte un error
cuando aparezca un error, hay que redirigir a esa página de panic

--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,27 @@
   color: white;
 }
 
+.PanicTitle{
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  background-position: center;
+  margin-top: 50px;
+  font-size: 350%;
+}
+.PanicText{
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  background-position: center;
+  margin-top: 20px;
+}
+.PanicLogo{
+  text-align: center;
+  background-position: center;
+  flex-direction: column;
+  height: 30%;
+}
 .Back{
   background-color:#306b48;
   margin-right:10%;
