Show Game casi DONE
Le falta el estilo de página  adecuado. Si entras en un juego que no es tuyo, no te deja modificarlo, solo lo enseña. También se ha añadido la opción de borrar juego

--- a/src/App.css
+++ b/src/App.css
@@ -138,6 +138,15 @@
   text-decoration: none;
   font-size: 16px;
 }
+.DeleteButton{
+  background-color: #8f1485fd;
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+}
 .ModifyButton{
   background-color: #008bfcfd;
   border: none;
