--- a/src/App.css
+++ b/src/App.css
@@ -57,6 +57,7 @@
   margin-top: 50px;
   font-size: 350%;
 }
+
 .PanicText{
   text-align: center;
   display: flex;
@@ -287,6 +288,7 @@ Video de youtube #9AD263
 
 /*W3Schools==================================================================================00*/
 .topnav {
+  z-index: 2;
   width: 100%;
   position:fixed;
   background-color: #9AD263;
