--- a/src/App.css
+++ b/src/App.css
@@ -130,6 +130,15 @@
   text-decoration: none;
   font-size: 16px;
 }
+.AdminButton{
+  background-color: #f1cf0afd;
+  border: none;
+  color: black;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+}
 .CancelButton{
   background-color: #fc0000fd;
   border: none;
