Terminado el dashboard de usuarios
Mas adelante se puede añadir mas cosas si se nos ocurre algo

--- a/src/App.css
+++ b/src/App.css
@@ -318,6 +318,11 @@ float:right;
 grid-area: right;
 padding-right:80px;
 }
+.sidenav3 {
+  float:right;
+  grid-area: right;
+  padding-right:20px;
+  }
 
 /* Style the links inside the navigation bar */
 .topnav a {
