--- a/src/App.css
+++ b/src/App.css
@@ -111,6 +111,7 @@
 .pagination > li:first-child > a, .pagination > li:first-child > span, .pagination > li:last-child > a, .pagination > li:last-child > span{
   border-radius: unset
 }
+
 .Button{
   background-color: #1e5f74;
   border: none;
@@ -324,11 +325,18 @@ Video de youtube #9AD263
 
 
 .FormStyle {
-  border-radius: 8px;
+  border-radius: 20px;
   border-color: #2c90b1;
   border: 3px solid rgb(93, 92, 102);
   background-color: #222933;
   padding: 40px;
+}
+.FormInput{
+  border-radius: 20px;
+  border-color: #2c90b1;
+  border: 3px solid rgb(93, 92, 102);
+  background-color: #222933;
+  padding: 10px;
 }
 
 /*W3Schools==================================================================================00*/
