Barra de búsqueda en el gamesComponent cambiada

--- a/src/App.css
+++ b/src/App.css
@@ -337,6 +337,7 @@ Video de youtube #9AD263
   border: 3px solid rgb(93, 92, 102);
   background-color: #222933;
   padding: 10px;
+  color: white;
 }
 
 /*W3Schools==================================================================================00*/
