--- a/src/App.css
+++ b/src/App.css
@@ -466,6 +466,18 @@ padding-right:80px;
   border:3px solid rgb(93, 92, 102);
 }
 /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
+.TextRes{
+  color:white;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+.TitleRes{
+  color:white;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+.SubTitleRes{
+  color:white;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
 @media screen and (max-width: 600px) {
   .topnav.responsive {position: relative;}
   .topnav.responsive a.icon {
@@ -478,6 +490,7 @@ padding-right:80px;
   }
   .TextRes{
     font-size: 9px;
+
   }
   .PanicText{
     font-size: 8px;
